--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "Toddler",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/logo.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#f8717f"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
