--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "node ./node_modules/eslint/bin/eslint.js **/*.jsx"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
@@ -16,8 +17,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-modal": "^11.5.6",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
