--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "expo-image-picker": "~9.1.1",
-    "expo-permissions": "~9.3.0"
+    "expo-permissions": "~9.3.0",
+    "expo-file-system": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
